--- a/index.html
+++ b/index.html
@@ -55,14 +55,14 @@
             <div id="seclection-2">
                 <button style="box-shadow: -5px 10px 30px rgb(255, 0, 0);
                                text-shadow: 0 0 3px #ff0000, 0 0 5px #0000FF;">
-                <a href="http">Back to lobby</a></button>
+                <a href="https://nokoraalatesu01.github.io/homealone/">Back to lobby</a></button>
             </div>
              </div>
             </div>
         <div id="button-prev">
             <button style="text-shadow: 0 0 3px #FF0000, 0 0 5px #0000FF;
                            box-shadow: 0px 10px 20px rgb(255, 0, 0);">
-                <a href="http">PREV</a></button></div>
+                <a href="https://nokoraalatesu01.github.io/homealone-firstpage-2/">PREV</a></button></div>
         <div id="slidebar">
             © 2022 .Bảm quyền thuộc về Turgon Kurenai. Nếu bạn có bản quyền với tác phẩm vui lòng liên hệ với tôi.
             <a href="https://www.facebook.com/profile.php?id=100068697413769" style="font-size:18px;" >
