--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <h3>
                 Thank for your playing. Hope you enjoy this.</h3>
                 </div>
-        <div class="đềmục">First Page>Lựa chọn 2>Lựa chọn 1>lựa chọn 2</div>
+        <div class="đềmục">First Page>Lựa chọn 2>lựa chọn 2</div>
         
         <div class="communication">
             Bấy giờ Nam đã thực sự quá mệt mỏi với những suy nghĩ vẩn vơ trong đầu. Loạng choạng, Cậu bước thật nhanh đến với chiếc giường màu xanh ga nhung êm ái.
